<package>
  <name>miivii_gmsl_ros</name>
  <version>1.0.1</version>
  <description>A ROS Driver for GMSL Cameras</description>

  <maintainer email="heng.zhang@miivii.com">miivii</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>v4l-utils</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
